# migration-strawberry-test

./: README.md  pyproject.toml
core/: schema.py  settings.py  urls.py
core/user/: models.py
core/user/graphql/: inputs.py  mutations.py  payloads.py  queries.py  types.py
core/user/migrations/: 0001_initial.py  0002_unifiedmodel_remove_randommodel_id_remove_user_id_and_more.py  0003_user_role.py
