[tool.poetry]
name = "migration-strawberry-test"
version = "0.1.0"
description = ""
authors = ["Alteian <Alteian@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = "^0.195.2"
strawberry-graphql-django = "0.12.0"
django = "^4.2.3"
django-model-utils = "^4.3.1"
strawberry-graphql-permission-extension = {git = "https://github.com/Alteian/strawberry-graphql-permission-extension.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
